# GuanDan

./: .gitignore  README.md  TODO.md  pyproject.toml  rules.md
.github/workflows/: ci.yml
src/: engine.py
tests/: test_engine.py
